[package]
name = "esp-exception-decoder"
version = "1.0.0"
edition = "2018"
authors = ["Maxime Borges <contact@maximeborg.es>"]

[lib]
name = "esp_exception_decoder_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "esp_exception_decoder"
path = "src/bin.rs"

[dependencies]
clap = "2"
addr2line = "0.16.0"
object = { version = "0.26", default-features = false, features = ["read"], optional = true }
typed-arena = "2"
regex = "1.5.4"
colored = "2"
wasm-bindgen = { version = "0.2" }
js-sys = "0.3"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
