[package]
name = "esp-exception-decoder"
version = "1.3.2"
edition = "2018"
authors = ["Maxime Borges <contact@maximeborg.es>"]

[lib]
name = "esp_exception_decoder_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "esp_exception_decoder"
path = "src/bin.rs"

[dependencies]
clap = "2"
addr2line = "0.16.0"
object = { version = "1.3.2"
typed-arena = "2"
regex = "1.5.4"
colored = "2"
wasm-bindgen = { version = "1.3.2"
js-sys = "0.3"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
